# fit-verify-pdf-timestamp

./: README.md  main.py  pyproject.toml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  type-check.yml  unit-tests.yml
fit_verify_pdf_timestamp/: __init__.py  rfc3161ng_compat.py
fit_verify_pdf_timestamp/controller/: verify_pdf_timestamp.py
fit_verify_pdf_timestamp/lang/: en.json  it.json
fit_verify_pdf_timestamp/ui/: verify_pdf_timestamp.ui
fit_verify_pdf_timestamp/view/: __init__.py  verify_pdf_timestamp.py  verify_pdf_timestamp_ui.py
tests/: conftest.py
tests/contract/: test_verify_pdf_timestamp_contract.py
tests/e2e/: test_verify_pdf_timestamp_e2e.py
tests/integration/: test_verify_pdf_timestamp_integration.py
tests/unit/: test_lang.py  test_main.py  test_rfc3161ng_compat.py  test_verify_pdf_timestamp.py
